hphp/hack/test/typecheck/goto/goto_multiple_labels.php
<?hh // partial

function test(): void {
  goto L0 L1;
}
